[gd_scene load_steps=12 format=3 uid="uid://iak44inrirb1"]

[ext_resource type="Script" uid="uid://dortf3hvj3dv0" path="res://enemy.gd" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://ccr20ehg8758n" path="res://scenes/bullet.tscn" id="2_4ra3w"]
[ext_resource type="Texture2D" uid="uid://c8c7lb6ilcme0" path="res://assets/Space Stuff 2/Enemy/Enemy Ship Sprites.png" id="3_4ra3w"]
[ext_resource type="Shader" uid="uid://dif2qa2gdlm1q" path="res://scripts/enemy.gdshader" id="3_c4w8v"]
[ext_resource type="Script" uid="uid://c17nhnqrujd8c" path="res://scripts/health_bar_container.gd" id="4_5uy6h"]
[ext_resource type="Texture2D" uid="uid://b35w3jb6uq65b" path="res://assets/Space Stuff 2/Player Sprites/pixil-frame-0-77.png" id="6_krt4s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4w8v"]
shader = ExtResource("3_c4w8v")
shader_parameter/flash = false
shader_parameter/flash_strength = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 2089.0

[sub_resource type="Animation" id="Animation_c4w8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/BooleanParameter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D2:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D3:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 0.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D3:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 0.4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwavj"]
_data = {
&"RESET": SubResource("Animation_c4w8v"),
&"shoot": SubResource("Animation_5uy6h")
}

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_md0e3")
bullet_scene = ExtResource("2_4ra3w")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_c4w8v")
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("3_4ra3w")
hframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.125, 1.125)
polygon = PackedVector2Array(-35, 140, 31, 31, 31, -31, -35, -137, -33, -160, -45, -156, -96, -154, -156, -152, -156, -139, -129, -22, -142, -20, -143, 16, -129, 19, -158, 143, -154, 153, -99, 152, -95, 157, -47, 156, -47, 160)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_7p1mj")

[node name="RandomMovementTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="HealthBarContainer" type="Node2D" parent="."]
script = ExtResource("4_5uy6h")

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer"]
modulate = Color(6.78644e-06, 0.882658, 3.85046e-07, 1)
offset_left = -173.0
offset_top = -379.0
offset_right = 175.0
offset_bottom = -336.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xwavj")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(58, 0)
scale = Vector2(4.23, 4.17)
color = Color(1, 0, 0, 1)
texture = ExtResource("6_krt4s")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(79, 177)
scale = Vector2(4.23, 4.17)
color = Color(1, 0, 0, 1)
energy = 0.4
texture = ExtResource("6_krt4s")

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(79, -173)
scale = Vector2(4.23, 4.17)
color = Color(1, 0, 0, 1)
energy = 0.4
texture = ExtResource("6_krt4s")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="RandomMovementTimer" to="." method="_on_random_movement_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
